--- a/index.html
+++ b/index.html
@@ -75,6 +75,23 @@
     <!-- Preload critical resources -->
     <link rel="preload" href="/fonts/game-font.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="prefetch" href="/images/bg-home.jpg" as="image" />
+    
+    <!-- GitHub Pages SPA support -->
+    <script>
+      // Single Page Apps for GitHub Pages
+      // MIT License
+      // https://github.com/rafgraph/spa-github-pages
+      (function(l) {
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) { 
+            return s.replace(/~and~/g, '&')
+          }).join('?');
+          window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      }(window.location))
+    </script>
   </head>
   <body>
     <div id="app"></div>
